--- a/app/src/main/res/layout/repo_view_item.xml
+++ b/app/src/main/res/layout/repo_view_item.xml
@@ -1,6 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingHorizontal="@dimen/row_item_margin_horizontal"
+    android:paddingTop="@dimen/row_item_margin_vertical">
+
+    <TextView
+        android:id="@+id/repo_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/titleColor"
+        android:textSize="@dimen/repo_name_size"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="repo name" />
+
+    <TextView
+        android:id="@+id/repo_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="10"
+        android:paddingVertical="@dimen/row_item_margin_vertical"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="@dimen/repo_description_size"
+        app:layout_constraintTop_toBottomOf="@id/repo_name"
+        tools:text="repo description" />
+
+    <TextView
+        android:id="@+id/repo_language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/row_item_margin_vertical"
+        android:text="@string/language"
+        android:textSize="@dimen/repo_description_size"
+        app:layout_constraintStart_toStartOf="@id/repo_description"
+        app:layout_constraintTop_toBottomOf="@id/repo_description"
+        tools:text="repo language" />
+
+    <TextView
+        android:id="@+id/repo_forks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/row_item_margin_vertical"
+        android:textSize="@dimen/repo_description_size"
+        app:layout_constraintEnd_toEndOf="@id/repo_description"
+        app:layout_constraintTop_toBottomOf="@id/repo_description"
+        tools:text="12" />
+
+    <ImageView
+        android:id="@+id/forks"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/row_item_margin_vertical"
+        android:src="@drawable/ic_git_branch_24"
+        app:layout_constraintBottom_toBottomOf="@id/repo_forks"
+        app:layout_constraintEnd_toStartOf="@id/repo_forks"
+        app:layout_constraintTop_toTopOf="@id/repo_forks" />
+
+    <TextView
+        android:id="@+id/repo_stars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/row_item_margin_vertical"
+        android:textSize="@dimen/repo_description_size"
+        app:layout_constraintBaseline_toBaselineOf="@id/repo_forks"
+        app:layout_constraintEnd_toStartOf="@id/forks"
+        tools:text="12" />
+
+    <ImageView
+        android:id="@+id/stars"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/row_item_margin_vertical"
+        android:src="@drawable/ic_star_24"
+        app:layout_constraintBottom_toBottomOf="@id/repo_stars"
+        app:layout_constraintEnd_toStartOf="@id/repo_stars"
+        app:layout_constraintTop_toTopOf="@id/repo_stars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
