--- a/app/src/main/res/layout/repo_view_item.xml
+++ b/app/src/main/res/layout/repo_view_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingHorizontal="@dimen/row_item_margin_horizontal"
     android:paddingTop="@dimen/row_item_margin_vertical">
 
